--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 __pycache__/
 *.py[codz]
 *$py.class
-
+*.pyo 
+*.pyd 
+*.pytest_cache/
 # C extensions
 *.so
 
@@ -50,6 +52,10 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
+
+# OS
+.DS_Store
+Thumbs.db
 
 # Translations
 *.mo
@@ -138,6 +144,7 @@ celerybeat.pid
 .env
 .envrc
 .venv
+.venv/
 env/
 venv/
 ENV/
@@ -186,7 +193,10 @@ cython_debug/
 #  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
 #  and can be added to the global gitignore or merged into this file. However, if you prefer, 
 #  you could uncomment the following to ignore the entire vscode folder
-# .vscode/
+
+# IDE 
+.vscode/
+.idea/
 
 # Ruff stuff:
 .ruff_cache/
@@ -205,3 +215,7 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Kubernetes / secrets
+*.env
+kubeconfig
