fix: correct image name and ignore terraform state

--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: python-app
-          image: ghcr.io/USERNAME/REPO:latest
+          image: ghcr.io/killmonger331/K8s-Python-CI-CD:latest
           ports:
             - containerPort: 8000
           env:
