--- a/.gitignore
+++ b/.gitignore
@@ -195,6 +195,7 @@ cython_debug/
 #  you could uncomment the following to ignore the entire vscode folder
 infra/terraform/.terraform/
 infra/terraform/.terraform.lock.hcl
+infra/terraform/terraform.tfstate
 
 
 # IDE 
