Update EKS cluster name in deploy workflow

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,7 +12,7 @@ permissions:
 env:
   IMAGE_NAME: ghcr.io/killmonger331/k8-python-ci-cd:latest
   AWS_REGION: us-east-1
-  CLUSTER_NAME: your-eks-cluster-name
+  CLUSTER_NAME: k8s-python-cluster
 
 jobs:
   deploy:
