--- a/k8s/base/ingress.yaml
+++ b/k8s/base/ingress.yaml
@@ -1,12 +1,22 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: python-app
+  name: python-app-ingress
+  namespace: dev
   annotations:
-    kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: alb
+
+    # ALB settings
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+
+    # HTTPS settings
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
+    alb.ingress.kubernetes.io/ssl-redirect: '443'
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:200686070529:certificate/5dd822ca-91a2-4edb-aeee-5569f14f6e90
 spec:
   rules:
-    - host: your-domain.com
+    - host: k8s.richard-morales.com
       http:
         paths:
           - path: /
@@ -15,5 +25,6 @@ spec:
               service:
                 name: python-app
                 port:
-                  number: 80
+                  number: 8000
+
                   
