test: verify CI/CD redeploy

--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -20,3 +20,23 @@ spec:
           env:
             - name: ENV
               value: "dev"
+livenessProbe:
+  httpGet:
+    path: /
+    port: 8000
+  initialDelaySeconds: 15
+  periodSeconds: 10
+
+readinessProbe:
+  httpGet:
+    path: /
+    port: 8000
+  initialDelaySeconds: 5
+  periodSeconds: 5
+resources:
+  requests:
+    cpu: "100m"
+    memory: "128Mi"
+  limits:
+    cpu: "500m"
+    memory: "256Mi"
